--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -8,14 +8,23 @@
   </div>
 </div>
 
+<!-- <div class="signature-container" id="export-signature-image-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
+    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+        <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: Nguyễn Kim Anh</div>
+        <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: 06/04/2023 14:21</div>
+        <img src="assets/img/test.png" style="position: absolute; bottom: 0; right: 0; width: 50px;">
+    </div>
+</div> -->
 
 <!-- <div class="signature-container" id="export-signature-image-html"
-     style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
-  <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+     style="width: 140px;min-height: 40px; font-size: 9px">
   <div class="signature-content"
-       style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
-    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Loại ký: {{'sign.image.otp' | translate}}</span>
-    <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Người ký: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</span>
-    <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">Ngày ký: {{isDateTime}}</span>
+       style="margin-left: 6px; color: ;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
+ 
+    <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+    <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: Nguyễn Kim Anh</div>
+    <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
   </div>
 </div> -->
