--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -462,8 +462,7 @@
 
 
 <div class="skeleton-sign position-absolute opacity-0">
-    <div class="signature-container" id="export-html"
-        style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
+    <div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
       <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
       <div class="signature-content"
           style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
@@ -472,6 +471,18 @@
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
       </div>
     </div>
+
+    <div id="export-html-image" style="position: relative;">
+        <img style="position: absolute; top: 0; left: 0;z-index: 1">
+        <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+            <div style="color: #4FC123; background-size: 40px 40px">
+                <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+                <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+                <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+            </div>
+        </div>
+    </div>
+    
   
     <div id="export-html-hsm"  style="min-height: 80px;display: flex; font-size: 9px">
       <img style="width: 30px"  src="assets/img/tick_signature.svg" alt="duongdt.vn">
@@ -480,6 +491,17 @@
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{nameCompany}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
       </div>
+    </div>
+
+    <div id="export-html-hsm-image" style="position: relative;">
+        <img style="position: absolute; top: 0; left: 0;z-index: 1">
+        <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+            <div style="color: #4FC123; background-size: 40px 40px">
+                <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
+                <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{nameCompany}}</span>
+                <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+            </div>
+        </div>
     </div>
 </div>
   
