--- a/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
+++ b/src/app/main/contract-signature/dialog/dialog-sign-many-component/dialog-sign-many-component.component.html
@@ -7,6 +7,14 @@
         <div style="font-size: 16px">{{'multi.sign.question' | translate}}
         </div>
       </div>
+
+      <div class="name-item" style="padding-top: 10px;">
+        <div style="font-size: 14px">{{'stamp.contract.questions' | translate}}
+        </div>
+        <div style="padding-top: 2px;">
+          <p-dropdown optionLabel="name" optionValue="id" [options]="options"></p-dropdown>
+        </div>
+      </div>
   
       <div class="select-option">
         <button (click)="dialog.closeAll()"
