--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,4 +1,4 @@
-<div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
+<div id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
@@ -7,12 +7,36 @@
     </div>
 </div>
 
-<div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+<div id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+    </div>
+</div>
+
+<!--usb token v1 có ảnh đóng dấu-->
+<div id="export-html-image" style="position: relative;">
+    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+        <div style="color: #4FC123; background-size: 40px 40px">
+            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        </div>
+    </div>
+</div>
+
+<!--usb token v2 có ảnh đóng dấu-->
+<div id="export-html2-image" style="position: relative;">
+    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;background-color: white">
+        <div style="color: #4FC123; background-size: 40px 40px">
+            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        </div>
     </div>
 </div>
 
@@ -37,11 +61,11 @@
 </div>
 
 
+<!--Hsm có ảnh đóng dấu-->
 <div id="export-html-hsm1-image" style="position: relative;">
-    <img [src]="srcMark" style="position: absolute; top: 0; left: 0; width: 30px;">
-    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;">
-        <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-        <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+        <div style="color: #4FC123; background-size: 40px 40px">
             <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
             <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
             <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
@@ -52,10 +76,23 @@
 
 <div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+    </div>
+</div>
+
+<!--Pki có ảnh đóng dấu-->
+<div id="export-html-pki-image" style="position: relative;">
+    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+        <div style="color: #4FC123; background-size: 40px 40px">
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
+            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
+            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+        </div>
     </div>
 </div>
