--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -16,10 +16,7 @@
       </div>
       <hr style="margin: 10px;">
   
-      <div style="max-height: calc(100vh - 400px);
-      height: calc(100vh - 400px);
-      overflow: hidden auto;
-      position: relative;">
+      <div style="max-height: calc(100vh - 400px);height: calc(100vh - 400px); overflow: hidden auto; position: relative;">
       <div>
         <div class="sample-contract__information--user-sign" style="line-height: 25px">
           <div style="text-align: center;" class="label">{{'information.signatures' | translate}}</div>
@@ -102,7 +99,7 @@
              
              [ngClass]="changeColorDrag(null, d)"
              [ngStyle]="changePosition(d)">
-          <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
+          <div *ngIf="d.sign_unit != 'text' && d.sign_unit != 'so_tai_lieu'" class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
           <app-sign-contract  [datas]="datasBatch" [sign]="d"></app-sign-contract>
         </div>
       </div>
