--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -22,7 +22,7 @@
         <div class="file-approve">
           <div class="label_item">{{'file.attach' | translate}}</div>
 
-          <input id="attachFile" type="file" accept=".pdf, .doc, .docx" (change)="uploadFileAttachForm($event)"
+          <input id="attachFile" type="file" accept=".pdf, .doc, .docx, .png, .jpg, .jpeg, .zip, .rar, .txt, .xls, .xlsx" (change)="uploadFileAttachForm($event)"
             style="display: none;" multiple />
 
           <div class="select-contract">
