--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="image-div">
-                    <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                    <img *ngIf="imgSignPCSelectMark" [src]="imgSignPCSelectMark" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
                     <img class="hidden_img" (click)="addFileAttach('mark')" src="assets/img/img-icon.svg" width="15" height="15" />
                 </div>
             </div>
