lưu con dấu của từng tài khoản

--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -82,7 +82,7 @@
                         <div class="upload-image-region d-flex flex-column container-img-file-1">
                             <img src="assets/img/img-icon.svg" alt="#" width="20px">
                             <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
-                            <div class="text-support-extension">{{'support.format.PNG.JPG.JPEG' | translate}}</div>
+                            <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
                         </div>
                     </div>
                 </div>
