--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -85,7 +85,7 @@
 </div>
 
 <!--Pki có ảnh đóng dấu-->
-<div id="export-html-pki-image" style="position: relative;">
+<div id="export-html-pki-image" style="position: relative; background-color: white;">
     <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
         <div style="color: #4FC123; background-size: 40px 40px">
