bo sung tinh nang hien thi dinh dang tien tai o text

--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -114,7 +114,7 @@
                 <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement
                     (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d)">
                     <div *ngIf="d.name || d.recipient" class="name-sig-img-daky">{{d.name ? d.name : d.recipient.name}}</div>
-                    <div *ngIf="d.name" class="sig-img-daky" (click)="onCancel($event, d)">
+                    <div *ngIf="d.name && d.sign_unit != 'text'" class="sig-img-daky" (click)="onCancel($event, d)">
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
