--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -17,19 +17,20 @@
 </div>
 
 <!--usb token v1 có ảnh đóng dấu-->
-<div id="export-html-image" style="position: relative;">
-    <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
+<div id="export-html-image" style="position: relative">
+    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
-        <div style="color: #4FC123; background-size: 40px 40px">
-            <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
-            <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
-            <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
+            <div style="text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
         </div>
     </div>
 </div>
 
+
 <!--usb token v2 có ảnh đóng dấu-->
-<div id="export-html2-image" style="position: relative;">
+<!-- <div id="export-html2-image" style="position: relative;">
     <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;background-color: white">
         <div style="color: #4FC123; background-size: 40px 40px">
@@ -38,7 +39,21 @@
             <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
         </div>
     </div>
+</div> -->
+
+<div id="export-html2-image" style="position: relative">
+    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2; background-color: white;">
+        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
+            <div style="text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
+            <div style="text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
+            <div style="text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+        </div>
+    </div>
 </div>
+
+
+
 
 
 <div class="signature-container" id="export-html-ekyc" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
@@ -62,10 +77,21 @@
 
 
 <!--Hsm có ảnh đóng dấu-->
-<div id="export-html-hsm1-image" style="position: relative;">
+<!-- <div id="export-html-hsm1-image" style="position: relative;">
     <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
         <div style="color: #4FC123; background-size: 40px 40px">
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
+            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+        </div>
+    </div>
+</div> -->
+
+<div id="export-html-hsm1-image" style="position: relative">
+    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
             <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
             <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
             <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
@@ -85,7 +111,7 @@
 </div>
 
 <!--Pki có ảnh đóng dấu-->
-<div id="export-html-pki-image" style="position: relative; background-color: white;">
+<!-- <div id="export-html-pki-image" style="position: relative; background-color: white;">
     <img [src]="srcMark" style="position: absolute; top: 0; left: 0;z-index: 1">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
         <div style="color: #4FC123; background-size: 40px 40px">
@@ -95,4 +121,17 @@
             <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
         </div>
     </div>
+</div> -->
+
+<div id="export-html-hsm1-image" style="position: relative; background-color: white;">
+    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
+    <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
+        <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
+            <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
+            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
+            <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</span>
+        </div>
+    </div>
 </div>
+
