--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -89,7 +89,7 @@
 </div> -->
 
 <div id="export-html-hsm1-image" style="position: relative">
-    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10" [src]="srcMark" alt="logo">
+    <img style="position: absolute; top: -5px; left: 0; width: 50%; z-index: -10; filter: blur(1px)" [src]="srcMark" alt="logo">
     <div style="min-height: 80px; display: flex; font-size: 9px; margin-left: 30px;z-index: 2;">
         <div class="signature-content" style="color: #4FC123; background-size: 40px 40px">
             <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
