--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -10,33 +10,37 @@
         </tr>
         <tr>
             <td class="sms-content">Huỷ hợp đồng</td>
-            <td><input type="checkbox"></td>
-            <td><input type="checkbox"></td>
+            <td><input type="radio" name="cancel" [value]="true" [(ngModel)]="cancelContract"></td>
+            <td><input type="radio" name="cancel" [value]="false" [(ngModel)]="cancelContract"></td>
         </tr>
         <tr>
             <td class="sms-content">Từ chối hợp đồng</td>
-            <td><input type="checkbox"></td>
-            <td><input type="checkbox"></td>
+            <td><input type="radio" name="reject" [value]="true" [(ngModel)]="rejectContract"></td>
+            <td><input type="radio" name="reject" [value]="false" [(ngModel)]="rejectContract"></td>
         </tr>
         <tr>
-            <td class="sms-content">Hợp đồng hết hạn</td>
-            <td><input type="checkbox"></td>
-            <td><input type="checkbox"></td>
+            <td class="sms-content">Hợp đồng sắp hết hạn</td>
+            <td><input type="radio" name="expired" [value]="true" [(ngModel)]="aboutExpiredContract"></td>
+            <td><input type="radio" name="expired" [value]="false" [(ngModel)]="aboutExpiredContract"></td>
         </tr>
         <tr>
             <td class="sms-content">Hợp đồng quá hạn</td>
-            <td><input type="checkbox"></td>
-            <td><input type="checkbox"></td>
+            <td><input type="radio" name="outOfDate" [value]="true" [(ngModel)]="outOfDateContarct"></td>
+            <td><input type="radio" name="outOfDate" [value]="false" [(ngModel)]="outOfDateContarct"></td>
         </tr>
         <tr>
             <td class="sms-content">Hợp đồng hoàn thành</td>
-            <td><input type="checkbox"></td>
-            <td><input type="checkbox"></td>
+            <td><input type="radio" name="completed" [value]="true" [(ngModel)]="completedContract"></td>
+            <td><input type="radio" name="completed" [value]="false" [(ngModel)]="completedContract"></td>
         </tr>
     </table>
 
     <div style="justify-content: center;padding-top: 20px;">
-        <button class="cancel-button" type="button">{{'contract.status.canceled' | translate}}</button>
-        <button class="save-button">{{'btn.update' | translate}}</button>
+        <!-- <button class="cancel-button" type="button">{{'contract.status.canceled' | translate}}</button> -->
+        <button class="save-button" (click)="updateSms()">{{'btn.update' | translate}}</button>
     </div>
 </div>
+
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
