--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
@@ -20,8 +20,8 @@
 </div>
 
 <!-- && !signTemplate -->
-  <div *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'" class="text-sign">
-    <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{ getText(sign) }}</span>
+  <div  class="text-sign">
+    <span *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'" [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{ getText(sign) }}</span>
   </div>
 
 <!-- <div>
